# rust-openvr

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE.md  Makefile  README.md  Readme.md  aliases.js  configure  configure_ovr.py  index.html  lib.rs  search-index.js  settings.html  source-files.js  test.rs  wrapper.cpp
examples/: camera.rs  debug.rs  opengl.rs  test.rs
openvr/: all.html  constant.MAX_TRACKED_DEVICE_COUNT.html  enum.ApplicationType.html  enum.Eye.html  enum.TrackedControllerRole.html  enum.TrackedDeviceClass.html  enum.TrackingResult.html  enum.TrackingUniverseOrigin.html  fn.init.html  index.html  sidebar-items.js  struct.Chaperone.html  struct.Compositor.html  struct.Context.html  struct.ControllerAxis.html  struct.ControllerState.html  struct.InitError.html  struct.RenderModels.html  struct.System.html  struct.TrackedDevicePose.html  struct.VkDevice_T.html  struct.VkInstance_T.html  struct.VkPhysicalDevice_T.html  struct.VkQueue_T.html  type.TrackedDeviceIndex.html  type.TrackedDevicePoses.html  type.TrackedDeviceProperty.html
openvr_sys/: all.html  constant.ChaperoneCalibrationState_Error.html  constant.ChaperoneCalibrationState_Error_BaseStationConflict.html  constant.ChaperoneCalibrationState_Error_BaseStationUninitialized.html  constant.ChaperoneCalibrationState_Error_CollisionBoundsInvalid.html  constant.ChaperoneCalibrationState_Error_PlayAreaInvalid.html  constant.ChaperoneCalibrationState_OK.html  constant.ChaperoneCalibrationState_Warning.html  constant.ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved.html  constant.ChaperoneCalibrationState_Warning_BaseStationRemoved.html  constant.ChaperoneCalibrationState_Warning_SeatedBoundsInvalid.html  constant.EAdditionalRadioFeatures_AdditionalRadioFeatures_ExternalDongle.html  constant.EAdditionalRadioFeatures_AdditionalRadioFeatures_HTCLinkBox.html  constant.EAdditionalRadioFeatures_AdditionalRadioFeatures_InternalDongle.html  constant.EAdditionalRadioFeatures_AdditionalRadioFeatures_None.html  constant.EChaperoneConfigFile_Live.html  constant.EChaperoneConfigFile_Temp.html  constant.EChaperoneImportFlags_EChaperoneImport_BoundsOnly.html  constant.ECollisionBoundsStyle_COLLISION_BOUNDS_STYLE_ADVANCED.html  constant.ECollisionBoundsStyle_COLLISION_BOUNDS_STYLE_BEGINNER.html  (+1598 more)
ovr/: info.rs  lib.rs  (+2 more)
(+467 files in other folders)
