[package]
name = "openvr"
version = "0.7.0"
authors = [
    "Colin Sherratt",
    "Erick Tryzelaar",
    "Rene Eichhorn",
    "Benjamin Saunders"
]
license = "MIT"

homepage = "https://github.com/rust-openvr/rust-openvr"
repository = "https://github.com/rust-openvr/rust-openvr"

description = "A high-level binding for OpenVR."

keywords = ["vr", "vive", "steamvr"]
categories = [ "hardware-support", "api-bindings" ]

[badges]
travis-ci = { repository = "rust-openvr/rust-openvr" }
maintenance = { status = "passively-maintained" }

[dependencies]
openvr_sys = "2.0.3"
lazy_static = "1.3.0"
vk-sys = {version = "0.5", optional = true}

[features]
default = []
vulkan = ["vk-sys"]  # Enables Vulkan interface functions.
#d3d12 = []   # Enables D3D12 interface functions.