[package]
name = "openvr"
version = "0.7.0"
authors = [
    "Colin Sherratt",
    "Erick Tryzelaar",
    "Rene Eichhorn",
    "Benjamin Saunders",
    "Alexander Brook Perry", 
    "Arthur Brainville"
]
edition = "2021"
license = "MIT"

homepage = "https://github.com/rust-openvr/rust-openvr"
repository = "https://github.com/rust-openvr/rust-openvr"

description = "A high-level binding for OpenVR."

keywords = ["vr", "vive", "steamvr"]
categories = [ "hardware-support", "api-bindings" ]

[badges]
travis-ci = { repository = "rust-openvr/rust-openvr" }
maintenance = { status = "passively-maintained" }

[dependencies]
openvr_sys = "2.1.1"
lazy_static = "1.3.0"
windows = {version = "0.51.1", optional = true, features = ["Win32_Graphics_Direct3D11"]}

[features]
default = []
submit_d3d11 = ["dep:windows"]
